# arc-lithium-theme

./: AUTHORS  README.md  arc-lithium-theme-upgrade  configure.ac
common/: Makefile.am  index.theme  index.theme-dark  index.theme-darker
common/gtk-2.0/: apps.rc  gtkrc  gtkrc-dark  gtkrc-darker
common/gtk-3.0/3.14/: gtk-darker.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.14/sass/: _colors.scss  _common.scss  _transparent_widgets.scss  _unity.scss
common/gtk-3.0/3.16/: gtk-darker.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.16/sass/: _common.scss  _transparent_widgets.scss
common/gtk-3.0/3.18/: gtk-darker.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.18/sass/: _common.scss  _lightdm.scss  _transparent_widgets.scss
common/gtk-3.0/3.20/: gtk-darker.css  gtk-solid-darker.css  gtk-solid.css  gtk.css
common/gtk-3.0/3.20/sass/: _colors.scss  _common.scss  _lightdm.scss  _transparent_widgets.scss  _unity.scss
common/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-2.xml  metacity-theme-3.xml
extra/: Makefile.am
extra/Arc-Lithium-Plank/: dock.theme
extra/Chrome/arc-lithium-dark-theme/: manifest.json
extra/Chrome/arc-lithium-darker-theme/: manifest.json
extra/Chrome/arc-lithium-theme/: manifest.json
m4/: arc-lithium-enable.m4  arc-lithium-gnome.m4
